commons/src/main/java/io/ballerina/lib/copybook/commons/generated/CopyBookParser.java
// Generated from CopyBook.g4 by ANTLR 4.13.1
package io.ballerina.lib.copybook.commons.generated;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CopyBookParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ALL=1, ARE=2, ASCENDING=3, BINARY=4, BIT=5, BLANK=6, BY=7, CHANNEL=8, 
		CHARACTER=9, COBOL=10, COMP=11, COMP_1=12, COMP_2=13, COMP_3=14, COMP_4=15, 
		COMP_5=16, COMPUTATIONAL=17, COMPUTATIONAL_1=18, COMPUTATIONAL_2=19, COMPUTATIONAL_3=20, 
		COMPUTATIONAL_4=21, COMPUTATIONAL_5=22, CONTROL_POINT=23, DATA=24, DATE=25, 
		DEPENDING=26, DESCENDING=27, DFHRESP=28, DFHVALUE=29, DISPLAY=30, DISPLAY_1=31, 
		DOUBLE=32, EVENT=33, EXTENDED=34, EXTERNAL=35, FALSE=36, FILLER=37, FULL=38, 
		FUNCTION_POINTER=39, GLOBAL=40, HIGH_VALUE=41, HIGH_VALUES=42, INDEX=43, 
		INDEXED=44, INTEGER=45, IS=46, JUST=47, JUSTIFIED=48, KANJI=49, KEY=50, 
		LEADING=51, LEFT=52, LINE=53, LOCAL=54, LOCK=55, LOW_VALUE=56, LOW_VALUES=57, 
		NATIONAL=58, NULL_=59, NULLS=60, OCCURS=61, OF=62, ON=63, PACKED_DECIMAL=64, 
		PIC=65, PICTURE=66, POINTER=67, PROCEDURE_POINTER=68, QUOTE=69, QUOTES=70, 
		REAL=71, REDEFINES=72, RENAMES=73, RIGHT=74, SEPARATE=75, SIGN=76, SPACE=77, 
		SPACES=78, STOP=79, STRING=80, SYNC=81, SYNCHRONIZED=82, TASK=83, THROUGH=84, 
		THRU=85, TIMES=86, TO=87, TRAILING=88, TRUE=89, TRUNCATED=90, TYPE=91, 
		USAGE=92, VALUE=93, VALUES=94, WHEN=95, WITH=96, ZERO=97, ZEROS=98, ZEROES=99, 
		ASTERISKCHAR=100, DOUBLEASTERISKCHAR=101, COLONCHAR=102, COMMACHAR=103, 
		DOLLARCHAR=104, DOT_FS=105, DOT=106, LESSTHANCHAR=107, LPARENCHAR=108, 
		MINUSCHAR=109, MORETHANCHAR=110, PLUSCHAR=111, RPARENCHAR=112, SLASHCHAR=113, 
		NONNUMERICLITERAL=114, LEVEL_NUMBER_66=115, LEVEL_NUMBER_77=116, LEVEL_NUMBER_88=117, 
		INTEGERLITERAL=118, NUMERICLITERAL=119, IDENTIFIER=120, NEWLINE=121, WS=122, 
		COMMENT=123;
	public static final int
		RULE_startRule = 0, RULE_dataDescription = 1, RULE_dataDescriptionEntry = 2, 
		RULE_dataDescriptionEntryFormat1 = 3, RULE_dataDescriptionEntryClauses = 4, 
		RULE_dataDescriptionEntryFormat2 = 5, RULE_dataDescriptionEntryFormat3 = 6, 
		RULE_dataBlankWhenZeroClause = 7, RULE_dataExternalClause = 8, RULE_dataGlobalClause = 9, 
		RULE_dataJustifiedClause = 10, RULE_dataOccursClause = 11, RULE_dataOccursTo = 12, 
		RULE_dataOccursSort = 13, RULE_dataPictureClause = 14, RULE_pictureString = 15, 
		RULE_pictureChars = 16, RULE_pictureCardinality = 17, RULE_dataRedefinesClause = 18, 
		RULE_dataRenamesClause = 19, RULE_dataSignClause = 20, RULE_dataSynchronizedClause = 21, 
		RULE_dataUsageClause = 22, RULE_dataValueClause = 23, RULE_dataValueInterval = 24, 
		RULE_dataValueIntervalFrom = 25, RULE_dataValueIntervalTo = 26, RULE_identifier = 27, 
		RULE_qualifiedDataName = 28, RULE_conditionName = 29, RULE_dataName = 30, 
		RULE_indexName = 31, RULE_cobolWord = 32, RULE_literal = 33, RULE_booleanLiteral = 34, 
		RULE_numericLiteral = 35, RULE_integerLiteral = 36, RULE_cicsDfhRespLiteral = 37, 
		RULE_cicsDfhValueLiteral = 38, RULE_figurativeConstant = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"startRule", "dataDescription", "dataDescriptionEntry", "dataDescriptionEntryFormat1", 
			"dataDescriptionEntryClauses", "dataDescriptionEntryFormat2", "dataDescriptionEntryFormat3", 
			"dataBlankWhenZeroClause", "dataExternalClause", "dataGlobalClause", 
			"dataJustifiedClause", "dataOccursClause", "dataOccursTo", "dataOccursSort", 
			"dataPictureClause", "pictureString", "pictureChars", "pictureCardinality", 
			"dataRedefinesClause", "dataRenamesClause", "dataSignClause", "dataSynchronizedClause", 
			"dataUsageClause", "dataValueClause", "dataValueInterval", "dataValueIntervalFrom", 
			"dataValueIntervalTo", "identifier", "qualifiedDataName", "conditionName", 
			"dataName", "indexName", "cobolWord", "literal", "booleanLiteral", "numericLiteral", 
			"integerLiteral", "cicsDfhRespLiteral", "cicsDfhValueLiteral", "figurativeConstant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'*'", "'**'", "':'", "','", "'$'", null, "'.'", 
			"'<'", "'('", "'-'", "'>'", "'+'", "')'", "'/'", null, "'66'", "'77'", 
			"'88'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ALL", "ARE", "ASCENDING", "BINARY", "BIT", "BLANK", "BY", "CHANNEL", 
			"CHARACTER", "COBOL", "COMP", "COMP_1", "COMP_2", "COMP_3", "COMP_4", 
			"COMP_5", "COMPUTATIONAL", "COMPUTATIONAL_1", "COMPUTATIONAL_2", "COMPUTATIONAL_3", 
			"COMPUTATIONAL_4", "COMPUTATIONAL_5", "CONTROL_POINT", "DATA", "DATE", 
			"DEPENDING", "DESCENDING", "DFHRESP", "DFHVALUE", "DISPLAY", "DISPLAY_1", 
			"DOUBLE", "EVENT", "EXTENDED", "EXTERNAL", "FALSE", "FILLER", "FULL", 
			"FUNCTION_POINTER", "GLOBAL", "HIGH_VALUE", "HIGH_VALUES", "INDEX", "INDEXED", 
			"INTEGER", "IS", "JUST", "JUSTIFIED", "KANJI", "KEY", "LEADING", "LEFT", 
			"LINE", "LOCAL", "LOCK", "LOW_VALUE", "LOW_VALUES", "NATIONAL", "NULL_", 
			"NULLS", "OCCURS", "OF", "ON", "PACKED_DECIMAL", "PIC", "PICTURE", "POINTER", 
			"PROCEDURE_POINTER", "QUOTE", "QUOTES", "REAL", "REDEFINES", "RENAMES", 
			"RIGHT", "SEPARATE", "SIGN", "SPACE", "SPACES", "STOP", "STRING", "SYNC", 
			"SYNCHRONIZED", "TASK", "THROUGH", "THRU", "TIMES", "TO", "TRAILING", 
			"TRUE", "TRUNCATED", "TYPE", "USAGE", "VALUE", "VALUES", "WHEN", "WITH", 
			"ZERO", "ZEROS", "ZEROES", "ASTERISKCHAR", "DOUBLEASTERISKCHAR", "COLONCHAR", 
			"COMMACHAR", "DOLLARCHAR", "DOT_FS", "DOT", "LESSTHANCHAR", "LPARENCHAR", 
			"MINUSCHAR", "MORETHANCHAR", "PLUSCHAR", "RPARENCHAR", "SLASHCHAR", "NONNUMERICLITERAL", 
			"LEVEL_NUMBER_66", "LEVEL_NUMBER_77", "LEVEL_NUMBER_88", "INTEGERLITERAL", 
			"NUMERICLITERAL", "IDENTIFIER", "NEWLINE", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CopyBook.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    int redefinesUsed = 0;
	    int blankWhenZeroUsed = 0;
	    int externalUsed = 0;
	    int globalUsed = 0;
	    int justifiedUsed = 0;
	    int occursUsed = 0;
	    int pictureUsed = 0;
	    int signUsed = 0;
	    int synchronizedUsed = 0;
	    int usageUsed = 0;
	    int dataValueUsed = 0;

	public CopyBookParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartRuleContext extends ParserRuleContext {
		public DataDescriptionContext dataDescription() {
			return getRuleContext(DataDescriptionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CopyBookParser.EOF, 0); }
		public StartRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CopyBookVisitor ) return ((CopyBookVisitor<? extends T>)visitor).visitStartRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartRuleContext startRule() throws RecognitionException {
		StartRuleContext _localctx = new StartRuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			dataDescription();
			setState(81);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataDescriptionContext extends ParserRuleContext {
		public List<DataDescriptionEntryContext> dataDescriptionEntry() {
			return getRuleContexts(DataDescriptionEntryContext.class);
		}
		public DataDescriptionEntryContext dataDescriptionEntry(int i) {
			return getRuleContext(DataDescriptionEntryContext.class,i);
		}
		public DataDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataDescription; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CopyBookVisitor ) return ((CopyBookVisitor<? extends T>)visitor).visitDataDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataDescriptionContext dataDescription() throws RecognitionException {
		DataDescriptionContext _localctx = new DataDescriptionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dataDescription);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(83);
				dataDescriptionEntry();
				}
				}
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 115)) & ~0x3f) == 0 && ((1L << (_la - 115)) & 271L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataDescriptionEntryContext extends ParserRuleContext {
		public DataDescriptionEntryFormat1Context dataDescriptionEntryFormat1() {
			return getRuleContext(DataDescriptionEntryFormat1Context.class,0);
		}
		public DataDescriptionEntryFormat2Context dataDescriptionEntryFormat2() {
			return getRuleContext(DataDescriptionEntryFormat2Context.class,0);
		}
		public DataDescriptionEntryFormat3Context dataDescriptionEntryFormat3() {
			return getRuleContext(DataDescriptionEntryFormat3Context.class,0);
		}
		public TerminalNode COMMENT() { return getToken(CopyBookParser.COMMENT, 0); }
		public DataDescriptionEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataDescriptionEntry; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CopyBookVisitor ) return ((CopyBookVisitor<? extends T>)visitor).visitDataDescriptionEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataDescriptionEntryContext dataDescriptionEntry() throws RecognitionException {
		DataDescriptionEntryContext _localctx = new DataDescriptionEntryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dataDescriptionEntry);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEVEL_NUMBER_77:
			case INTEGERLITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				dataDescriptionEntryFormat1();
				}
				break;
			case LEVEL_NUMBER_66:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				dataDescriptionEntryFormat2();
				}
				break;
			case LEVEL_NUMBER_88:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				dataDescriptionEntryFormat3();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataDescriptionEntryFormat1Context extends ParserRuleContext {
		public DataDescriptionEntryClausesContext dataDescriptionEntryClauses() {
			return getRuleContext(DataDescriptionEntryClausesContext.class,0);
		}
		public TerminalNode DOT_FS() { return getToken(CopyBookParser.DOT_FS, 0); }
		public TerminalNode INTEGERLITERAL() { return getToken(CopyBookParser.INTEGERLITERAL, 0); }
		public TerminalNode LEVEL_NUMBER_77() { return getToken(CopyBookParser.LEVEL_NUMBER_77, 0); }
		public TerminalNode FILLER() { return getToken(CopyBookParser.FILLER, 0); }
		public DataNameContext dataName() {
			return getRuleContext(DataNameContext.class,0);
		}
		public DataDescriptionEntryFormat1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataDescriptionEntryFormat1; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CopyBookVisitor ) return ((CopyBookVisitor<? extends T>)visitor).visitDataDescriptionEntryFormat1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataDescriptionEntryFormat1Context dataDescriptionEntryFormat1() throws RecognitionException {
		DataDescriptionEntryFormat1Context _localctx = new DataDescriptionEntryFormat1Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_dataDescriptionEntryFormat1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !(_la==LEVEL_NUMBER_77 || _la==INTEGERLITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(95);
				match(FILLER);
				}
				break;
			case 2:
				{
				setState(96);
				dataName();
				}
				break;
			}
			setState(99);
			dataDescriptionEntryClauses();
			setState(100);
			match(DOT_FS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
